package architectoryHW6.flyWeight;

public class Cat implements IAnimal{
    @Override
    public void zoo() {
        System.out.println("Cat");
    }
}
