package architectoryHW6.flyWeight;

public class Dog implements IAnimal{
    @Override
    public void zoo() {
        System.out.println("Dog");
    }
}
