package architectoryHW6.flyWeight;

public interface IAnimal {
    public void zoo();
}
